--- a/SB-Security-With-Api/src/main/resources/application.properties
+++ b/SB-Security-With-Api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SB-Security-With-Api
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost:3306/sb-security?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sb-security?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
